--- a/apps/shop/.eslintrc.json
+++ b/apps/shop/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "oneshopWeb",
+            "prefix": "shop",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "oneshop-web",
+            "prefix": "shop",
             "style": "kebab-case"
           }
         ]
