--- a/apps/shop/.eslintrc.json
+++ b/apps/shop/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "shop",
+            "prefix": ["oneshop-web", "shop"],
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "shop",
+            "prefix": ["oneshop-web", "shop"],
             "style": "kebab-case"
           }
         ]
