no-empty-function: off,

--- a/apps/shop/.eslintrc.json
+++ b/apps/shop/.eslintrc.json
@@ -24,7 +24,9 @@
             "prefix": ["oneshop-web", "shop"],
             "style": "kebab-case"
           }
-        ]
+        ],
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "error"
       }
     },
     {
