Allow eslint empty ngOnInit and constructor @ shop

--- a/apps/shop/.eslintrc.json
+++ b/apps/shop/.eslintrc.json
@@ -26,7 +26,8 @@
           }
         ],
         "no-empty-function": "off",
-        "@typescript-eslint/no-empty-function": "error"
+        "@typescript-eslint/no-empty-function": "off",
+        "@angular-eslint/no-empty-lifecycle-method": "off"
       }
     },
     {
