--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.0",
-    "@angular/common": "~14.2.0",
-    "@angular/compiler": "~14.2.0",
-    "@angular/core": "~14.2.0",
-    "@angular/forms": "~14.2.0",
-    "@angular/platform-browser": "~14.2.0",
-    "@angular/platform-browser-dynamic": "~14.2.0",
-    "@angular/router": "~14.2.0",
+    "@angular/animations": "~15.0.0",
+    "@angular/common": "~15.0.0",
+    "@angular/compiler": "~15.0.0",
+    "@angular/core": "~15.0.0",
+    "@angular/forms": "~15.0.0",
+    "@angular/platform-browser": "~15.0.0",
+    "@angular/platform-browser-dynamic": "~15.0.0",
+    "@angular/router": "~15.0.0",
     "@nrwl/angular": "^15.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
@@ -27,17 +27,17 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.0",
+    "@angular-devkit/build-angular": "~15.0.0",
     "@angular-eslint/eslint-plugin": "~14.0.4",
     "@angular-eslint/eslint-plugin-template": "~14.0.4",
     "@angular-eslint/template-parser": "~14.0.4",
-    "@angular/cli": "~14.2.0",
-    "@angular/compiler-cli": "~14.2.0",
-    "@angular/language-service": "~14.2.0",
+    "@angular/cli": "~15.0.0",
+    "@angular/compiler-cli": "~15.0.0",
+    "@angular/language-service": "~15.0.0",
     "@nrwl/cli": "15.0.1",
     "@nrwl/cypress": "15.0.1",
     "@nrwl/eslint-plugin-nx": "15.0.1",
-    "@nrwl/jest": "15.0.1",
+    "@nrwl/jest": "15.2.1",
     "@nrwl/linter": "15.0.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.1",
@@ -53,8 +53,12 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
+    "ng-packagr": "~15.0.0",
     "nx": "15.0.1",
     "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "28.0.5",
