--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nrwl/angular": "^15.2.1",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
