--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
     "@nrwl/angular": "^15.2.1",
+    "i18n-iso-countries": "^7.5.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
     "quill": "^1.3.7",
