--- a/apps/shop/project.json
+++ b/apps/shop/project.json
@@ -8,6 +8,7 @@
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
+      "tailwindConfig": "./tailwind.config.js",
       "options": {
         "outputPath": "dist/apps/shop",
         "index": "apps/shop/src/index.html",
