--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nrwl/linter": "15.0.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.0.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
