--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~15.0.0",
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
+    "@ngrx/component-store": "~15.0.0-beta.0",
+    "@ngrx/effects": "~15.0.0-beta.0",
+    "@ngrx/entity": "~15.0.0-beta.0",
+    "@ngrx/router-store": "~15.0.0-beta.0",
+    "@ngrx/store": "~15.0.0-beta.0",
     "@nrwl/angular": "^15.2.1",
     "i18n-iso-countries": "^7.5.0",
     "primeicons": "^6.0.1",
@@ -36,6 +41,8 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "~15.0.0",
     "@angular/language-service": "~15.0.0",
+    "@ngrx/schematics": "~15.0.0-beta.0",
+    "@ngrx/store-devtools": "~15.0.0-beta.0",
     "@nrwl/cli": "15.0.1",
     "@nrwl/cypress": "15.0.1",
     "@nrwl/eslint-plugin-nx": "15.0.1",
@@ -53,6 +60,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
