--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngrx/router-store": "~15.0.0-beta.0",
     "@ngrx/store": "~15.0.0-beta.0",
     "@nrwl/angular": "^15.2.1",
+    "@stripe/stripe-js": "^1.52.1",
     "i18n-iso-countries": "^7.5.0",
+    "ngx-stripe": "^15.6.0",
     "primeicons": "^6.0.1",
     "primeng": "^14.2.0",
     "quill": "^1.3.7",
@@ -34,7 +36,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.0",
+    "@angular-devkit/build-angular": "^15.2.7",
     "@angular-eslint/eslint-plugin": "~14.0.4",
     "@angular-eslint/eslint-plugin-template": "~14.0.4",
     "@angular-eslint/template-parser": "~14.0.4",
